# pipecat-poc

./: README.md  docker-compose.yaml
backend/: Dockerfile  langsmith_processor.py  main.py  pyproject.toml
frontend/: Dockerfile  changelog.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  Bot.tsx  DeviceSelector.tsx  MediaTrack.css  MediaTrack.tsx  index.css
